--- a/manifest.plist
+++ b/manifest.plist
@@ -10,7 +10,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://dracmadev.github.io/Spacepools_IOs_App/Spacepools.ipa</string>
+                    <string>https://drive.google.com/uc?export=download&id=1vRbvIaaChMbdovPPj1gIYn88zFIRMhJe</string>
                 </dict>
             </array>
             <key>metadata</key>
