--- a/manifest.plist
+++ b/manifest.plist
@@ -10,7 +10,8 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://drive.google.com/uc?export=download&id=1vRbvIaaChMbdovPPj1gIYn88zFIRMhJe</string>
+                    <key>url</key>
+                    <string>https://drive.google.com/uc?export=download&id=14AnEwi7G7Gh71dXfPUqMa5E8HYMxy7bm</string>
                 </dict>
             </array>
             <key>metadata</key>
